--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ header {
     .flex-header {
       display: block; } }
 
+@media screen and (min-width: 250px) and (max-width: 992px) {
+  #nav-responsive {
+    text-align: center; } }
+
 #instagram {
   margin-left: 25px; }
   @media screen and (min-width: 250px) and (max-width: 992px) {
@@ -72,42 +76,52 @@ header {
 # index 1
 --------------------------------------------------------------*/
 .inicio {
-  margin-top: 100px; }
+  margin-top: 50px; }
 
 .carousel .carousel-inner {
-  height: 75vh; }
+  /*height: 75vh;*/ }
   .carousel .carousel-inner .carousel-item img {
     position: relative;
     width: 100%;
     height: 600px; }
 
-/*.carousel-caption{
-    z-index: 10; 
-    position: relative; width: 50%; align-items: left;
-    right: 15%;
-    bottom: 20px;
-    left: 0px;
-}
-.carousel-frase{
-   
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: #fff;
-    margin-bottom: 250px;
-    align-items: left;
-  p {
-    font-family: 'Montserrat', sans-serif; font-size: 2rem; margin-left: 0px; padding-right: 30px; 
-    margin-right: 0px; padding-left: 50px; padding-bottom: 1rem; padding-top: 1rem; margin-bottom: 0px; font-weight: 400;
-    background-color: white; background:rgba(255,255,255, 0.3); margin-left: 0px; text-align: left; margin-bottom: 0px;
-  }
-}
-.carousel-frase{
-   
-  
-  
-}
+.carousel-frase {
+  z-index: 10;
+  position: absolute;
+  width: 50%;
+  right: 15%;
+  bottom: 20px;
+  left: 0%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+  margin-bottom: 200px;
+  align-items: left; }
+  @media screen and (min-width: 250px) and (max-width: 768px) {
+    .carousel-frase {
+      width: 65%; } }
+  .carousel-frase p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    margin-left: 0px;
+    padding-right: 30px;
+    margin-right: 0px;
+    padding-left: 50px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    margin-bottom: 0px;
+    font-weight: 400;
+    background-color: white;
+    background: rgba(255, 255, 255, 0.3);
+    margin-left: 0px;
+    text-align: left;
+    margin-bottom: 0px; }
+    @media screen and (min-width: 250px) and (max-width: 768px) {
+      .carousel-frase p {
+        padding-left: 10px;
+        padding-right: 0px; } }
 
-#hero {
+/*#hero {
   background: url("../images/hands-plant2.jpg"); background-position: center; background-size: cover;
    position: relative; padding-top: 300px; padding-bottom: 330px; height: 60vh; width: 100%;
   
@@ -119,25 +133,32 @@ header {
 	}
   .frase-inicio{
         
-  }*/
-@media (max-width: 992px) {
-  #hero .container {
-    padding-top: 62px; } }
+  }
+	@media (max-width: 992px) {
+  		#hero .container {
+    		padding-top: 62px;
+  		}
+  }
 
-@media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed; } }
+	@media (min-width: 1024px) {
+  		#hero {
+    		background-attachment: fixed;
+  		}
+	}
 
-@media (max-width: 768px) {
-  #hero {
-    height: 100vh; }
-  #hero h1 {
-    font-size: 28px;
-    line-height: 36px; }
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px; } }
-
+	@media (max-width: 768px) {
+  		#hero {
+    		height: 100vh;
+  		}
+  		#hero h1 {
+    		font-size: 28px;
+    		line-height: 36px;
+  		}
+  		#hero h2 {
+    		font-size: 18px;
+    		line-height: 24px;
+  		}
+	}*/
 section {
   padding-bottom: 0px;
   padding-top: 0px;
@@ -748,6 +769,9 @@ ul {
       margin-right: 30px;
       margin-top: 30px;
       padding-bottom: 20px; }
+      @media screen and (min-width: 250px) and (max-width: 576px) {
+        .grid-contacto .flexRedesContacto .redesContacto {
+          margin-right: 15px; } }
     .grid-contacto .flexRedesContacto .redesContacto:hover {
       transform: scale(1.1);
       transform-origin: center;
