--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ header {
   @media screen and (min-width: 250px) and (max-width: 576px) {
     .carousel-frase {
       align-items: center;
-      margin-bottom: 50px;
+      margin-bottom: 30px;
       width: auto; } }
   .carousel-frase p {
     font-family: 'Montserrat', sans-serif;
@@ -320,6 +320,13 @@ ul {
         font-size: 20px;
         color: #6f9c53;
         font-weight: 600; }
+      .nosotros-content .grid-parrafo #p-derecha .trabajamos-2 {
+        font-size: 20px;
+        color: #6f9c53;
+        font-weight: 600; }
+        @media screen and (min-width: 250px) and (max-width: 992px) {
+          .nosotros-content .grid-parrafo #p-derecha .trabajamos-2 {
+            color: white; } }
 
 .grid-nosotros {
   display: grid;
@@ -430,7 +437,7 @@ ul {
     font-weight: 300;
     background-color: #848484;
     margin-bottom: 1rem; }
-    @media screen and (min-width: 250px) and (max-width: 768px) {
+    @media screen and (min-width: 250px) and (max-width: 992px) {
       #seccionEstrategia #estrategiaYGestion {
         text-align: center;
         padding-left: 0px; } }
@@ -482,7 +489,7 @@ ul {
     margin-bottom: 1rem;
     text-align: right;
     position: relative; }
-    @media screen and (min-width: 250px) and (max-width: 768px) {
+    @media screen and (min-width: 250px) and (max-width: 992px) {
       #seccionCapacitaciones #capacitaciones {
         padding-right: 0px;
         text-align: center; } }
@@ -536,7 +543,7 @@ ul {
   font-weight: 300;
   background-color: #848484;
   padding-bottom: 1rem; }
-  @media screen and (min-width: 250px) and (max-width: 768px) {
+  @media screen and (min-width: 250px) and (max-width: 992px) {
     #seccionComunicacion #comunicacionDeImpacto {
       padding-left: 0px;
       text-align: center; } }
